<resources>
    <string name="app_name">testing_para_aire_libre</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="entrar">Ingresar</string>
    <string name="bienvenida">"nos volvemos a ver, "</string>
    <string name="invalid_username">El usuario no es válido</string>
    <string name="invalid_password">La contraseña tiene que tener más de 5 caracteres</string>
    <string name="login_failed">"Fallo al ingresar"</string>
    <string name="ignorar">"Recordar más tarde"</string>
</resources>